<resources>

    <string name="str_en">English</string>
    <string name="str_es">Spanish</string>
    <string name="app_name">Ekaa</string>

    <string name="web_name">wfp.org/es</string>
    <string name="welcome">Welcome to Ekaa.</string>
    <string name="options">Forgot your password?</string>

    <string name="terms">By tapping Log in, Create account or more options, I agree to Ekaa terms of service, Privacy Policiy and Non discrimination policy</string>
    <string name="login">Log In</string>
    <string name="create">Create Account</string>
    <string name="register">Don`t have account? Sign up now!</string>
    <string name="createaccount">REGISTER</string>
    <string name="loginaccount">LOGIN</string>
    <string name="email">Email</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="agreeterms">I agree to the Terms of Service</string>
    <string name="forgotyourpassword">Forgot your password? Click Here</string>
    <string name="forgotpassword">Forgot your password?</string>
    <string name="mainmenu">Main Menu</string>
    <string name="school">School</string>
    <string name="kitchens">Kitchens</string>
    <string name="walkers">Walkers</string>
    <string name="inkind">Inkind</string>
    <string name="cloud">Cloud</string>
    <string name="url">Url</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="moremoreoptions">More Options</string>
    <string name="alreadymember">Already a member? Login Here</string>
    <string name="language">Language</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="implementatorpartner">Implentator Partner</string>
    <string name="confirmemail">Confirm your email</string>
    <string name="datapolicy">Do you grant WFP permission to process your personal data and share it with your partners, including humanitarian and / or private organizations, and / or the Government in order to implement WFP food assistance program?
If you decide not to grant consent to any of the required entities, WFP will endeavor to provide other forms of assistance that do not require such personal data, if applicable, and if possible, however, you may not be able to receive assistance.</string>
    <string name="datatitle">Data Processing Policy</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add beneficiary</string>
    <string name="help">Do you need help?, Click here</string>
    <string name="logout">Log Out</string>
    <string name="select">Please select your institution</string>
    <string name="editar">Edit</string>
    <string name="housecode">Family code</string>
    <string name="completename">Full name</string>
    <string name="birthdate">Birth Date</string>
    <string name="identificationnumber">Identification number</string>
    <string name="tel">Phone</string>
    <string name="save">Save</string>
    <string name="departamentselect">Please select your departament</string>
    <string name="townselect">Please select your town</string>
    <string name="wfp">WFP</string>
    <string name="Hpartners">Humanitarian Partners</string>
    <string name="Ppartners">Private Partners</string>
    <string name="Gpartners">Government Partners</string>
    <string name="School">School</string>
    <string name="SchoolGroup">School Group</string>
    <string name="AddStudent">Add Student</string>

    <string name="dtype">Document Type</string>
    <string name="gender">Gender</string>
    <string name="nationality">Nationality</string>
    <string name="comedor">Comedor</string>
    <string name="Enviar">Send</string>
    <string name="ConfirmEmail">Confirm your email</string>
    <string name="detail"><u>See detail</u></string>
    <string name="schoolstring">School</string>
    <string name="group">Group</string>
    <string name="registrationdate">Registation Date</string>
    <string name="attention">Attention</string>
    <string name="lastAttention">The last attention was:</string>
    <string name="firstname">First Name</string>
    <string name="secondname">Second Name</string>
    <string name="lastname">Last Name</string>
    <string name="surname">Second Last Name</string>
    <string name="etnia">Ethnic group</string>
    <string name="belongs">Belong to the program?</string>
    <string name="phonenumber">Phone Number</string>
    <string name="note">Note</string>
    <string name="maritalstatus">Marital Status</string>
    <string name="recipient">Recipient</string>
    <string name="familyrol">Family Rol</string>
    <string name="aditionalinfo">Additional Information</string>
    <string name="familyhead">Is head of the family?</string>
    <string name="migratorio">Migratory state</string>
    <string name="option">Please select the option</string>
    <string name="disabilities">Disability</string>
    <string name="programs">Program</string>
    <string name="classnumber">Class</string>
    <string name="editStudent">Edit Student</string>
    <string name="update">Update</string>
    <string name="registerbeneficiary">Register</string>
    <string name="createstudent">Create Student</string>
    <string name="studentsuccess">Student created successfully</string>
    <string name="studentupdate">Student updated successfully</string>
    <string name="attendancesuccess">Added attention successfully</string>
    <string name="beneficiarysucces">Beneficiary successfully created</string>
    <string name="beneficiaryupdate">Beneficiary updated successfully</string>
    <string name="page">Page</string>
    <string name="searchresult">Search Result</string>
    <string name="ingresaremail">You must enter an email</string>
    <string name="validemail">You must enter a valid email</string>
    <string name="ingresarpass">You must enter an password</string>
    <string name="ingresaruser">You must enter an user</string>
    <string name="confirmarspass">You must confirm the password</string>
    <string name="confirmaremail">An email has been sent to confirm your account</string>
    <string name="welcomeuser">Welcome to Ekaa</string>
    <string name="selectopion">Select a option</string>
    <string name="departamentosfound">No departments found</string>
    <string name="townsfound">No towns found</string>
    <string name="institutionsfound">No institutions found</string>
    <string name="adios">Good Bye!</string>
    <string name="coincidircorreos">Emails do not match</string>
    <string name="checkboxterminos">You must agree to terms and conditions</string>
    <string name="usersuccess">Beneficiary added successfully</string>
    <string name="useradd">Do you want to add another member to your family nucleus?</string>
    <string name="agree">Agree</string>
    <string name="cancelar">Close</string>
    <string name="obligatorio">This field is required</string>
    <string name="searchBeneficiary">Search Beneficiary</string>
    <string name="Alert">Alert</string>
    <string name="AlertModality">This user has already received attention in a different modality</string>
    <string name="Addmember">Add Member</string>
    <string name="Deletemember">Delete Member</string>
    <string name="deletemember">Please select the cause for which you want to remove this household member</string>
    <string name="newhome">New home</string>
    <string name="died">Death</string>


    <string name="groupselect">Please select your group</string>
    <string name="classselect">Please select your class</string>

    <string name="edit_beneficiary">Edit Beneficiary</string>
    <string name="create_beneficiary">Crete Beneficiary</string>


    <string-array name="homechange">
        <item>@string/newhome</item>
        <item>@string/died</item>
    </string-array>

    <!-- Sync Preferences -->
    <string-array name="languages">
        <item>@string/str_en</item>
        <item>@string/str_es</item>
    </string-array>
    <string-array name="documentType">
        <item>@string/dtype</item>
        <item>Cédula de Ciudadanía</item>
        <item>Tarjeta de Identidad</item>
        <item>Cédula de Extranjeria</item>
        <item>Registro Civil de Nacimiento</item>
        <item>Cedula Venezonala</item>
        <item>Pasaporte Venezolano</item>
        <item>Permiso Especial de Permanencia (PEP)</item>
        <item>Tarjeta de Movilidad Fronteriza (TMF)</item>
        <item>WFP Smart Card</item>
        <item>WFP Barcode-ID Card</item>
        <item>No Disponible (Sin Documento)</item>

    </string-array>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string-array name="nation">
        <item>Nationality</item>
        <item>Colombia</item>
        <item>Venezuela</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="comedor">
        <item>Institution</item>
        <item>Kitchen 1</item>
        <item>Kitchen 2</item>
        <item>Kitchen 3</item>
        <item>Kitchen 4</item>
        <item>Kitchen 5</item>
        <item>Kitchen 6</item>
        <item>Kitchen 7</item>
        <item>Kitchen 8</item>


    </string-array>

</resources>
