<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="675dp"
    android:background="#ffffff"
    android:padding="5dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/txtclose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="#000000"
        android:text="X"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="169dp"
            android:layout_height="68dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:contentDescription="@null"
            android:src="@drawable/userblack" />

        <TextView
            android:id="@+id/kitchen_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="Felipe Avila"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColor="#000000" />
    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">



    <LinearLayout

        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_modalities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>



    </ScrollView>



    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/lastAttention"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/detail"
        android:textColor="#1f75fe" />

    <Button
        android:id="@+id/btnfollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_selector"
        android:fontFamily="sans-serif-medium"
        android:text="@string/createaccount"
        android:textColor="#ffffff"/>



</LinearLayout>